--- a/lang/pt.json
+++ b/lang/pt.json
@@ -5,6 +5,7 @@
 
     "a seizure": "uma crise",
     "active medication": "medicação ativa",
+    "activate reminders for this medication": "ativar lembretes para este medicamento",
     "absence": "ausência",
     "access qr code": "aceder código QR",
     "add question": "adicionar questão",
@@ -36,12 +37,14 @@
     "connected device(s)": "dispositivo ligado(s)",
     "color scheme": "esquema de cor",
     "comming soon": "brevemente",
+    "cream": "creme",
     "create": "criar",
     "custom": "base",
 
     "daily tip": "dica do dia",
     "data": "dados",
     "date": "data",
+    "date of intake": "data da toma",
     "date(s) of seizure(s)": "data(s) da(s) crise(s)",
     "deep calm": "calma profunda",
     "description notes": "notas de descrição",
@@ -77,6 +80,7 @@
     "hold": "sustenha",
     "home": "página inicial",
     "hormonal fluctuations": "flutuações hormonais",
+    "hours": "horas",
     "how are you feeling": "como te sentes hoje",
 
     "I'm ok now": "Já estou bem",
@@ -96,9 +100,12 @@
     "loss of urine or bowel control": "perda de urina ou de controlo da bexiga",
 
     "male": "masculino",
-    "managing Epilepsy": "gerir a Epilépsia",
+    "managing Epilepsy": "gerir a Epilepsia",
     "medication": "medicação",
     "medication prescription": "medicamentos prescritos",
+    "medicine name": "nome do medicamento",
+    "medicine info": "informação sobre o medicamento",
+    "medicine type": "tipo de medicamento",
     "missed any medication": "alguma medicação em falta",
     "modules": "modulos",
     "month": "mês",
@@ -138,6 +145,7 @@
     "patient info": "informação do Paciente",
     "patients": "pacientes",
     "PDF export": "exportar PDF",
+    "pill": "comprimido",
     "pills": "comprimidos",
     "please enter a valid email address": "por favor insira um email valido",
     "press here to add": "pressiona aqui para adicionar",
@@ -164,7 +172,7 @@
     "seizure type:": "tipo de crise",
     "seizures": "crises",
     "select interval between intakes": "selectionar intervalo entre tomas",
-    "set reminders": "definir lembretes",
+    "set reminder": "definir lembrete",
     "settings": "definições",
     "sex": "género",
     "sick": "doente",
@@ -179,7 +187,7 @@
     "sleepy": "sonolento",
     "somnolence": "sonolência",
     "square": "quadrado",
-    "start date": "início da toma",
+    "starting date": "início da toma",
     "statistics": "estatísticas",
     "starting time": "hora de início",
     "stressed": "nervoso",
@@ -188,6 +196,8 @@
     "survey name": "nome do questionário",
     "surveys": "questionários",
     "symptoms": "sintomas",
+    "syringe": "seringa",
+    "syrup": "xarope",
 
     "tablespoons": "colheres",
     "take a look at your day": "o resumo do teu dia",
