update MedicationPage and NewMediationEntry

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -88,6 +88,7 @@
     "information": "informação",
     "inhale": "inspire",
     "inhale-hold-exhale-hold": "inspire-sustenha-expire-sustenha",
+    "intake times": "horas da toma",
     "introduction to Epilepsy": "introdução à Epilepsia",
     "irregular diet": "dieta/alimentação irregular",
     "irritability": "irritabilidade",
@@ -102,6 +103,7 @@
     "male": "masculino",
     "managing Epilepsy": "gerir a Epilepsia",
     "medication": "medicação",
+    "medication history": "histórico de medicação",
     "medication prescription": "medicamentos prescritos",
     "medicine name": "nome do medicamento",
     "medicine info": "informação sobre o medicamento",
