deal with null attributes + add one time scheduled med

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -60,6 +60,7 @@
     "emergency": "emergência",
     "emergency medication": "toma espontânea",
     "emotional stress": "stress emocional",
+    "ending date": "fim da toma",
     "Epilepsy": "Epilepsia",
     "error": "erro",
     "exercises": "exercícios",
@@ -88,7 +89,8 @@
     "information": "informação",
     "inhale": "inspire",
     "inhale-hold-exhale-hold": "inspire-sustenha-expire-sustenha",
-    "intake times": "horas da toma",
+    "intake date": "data da toma",
+    "intake time(s)": "hora(s) da toma",
     "introduction to Epilepsy": "introdução à Epilepsia",
     "irregular diet": "dieta/alimentação irregular",
     "irritability": "irritabilidade",
@@ -175,6 +177,7 @@
     "seizures": "crises",
     "select interval between intakes": "selectionar intervalo entre tomas",
     "set reminder": "definir lembrete",
+    "set intake information": "definir informação das tomas",
     "settings": "definições",
     "sex": "género",
     "sick": "doente",
@@ -203,6 +206,7 @@
 
     "tablespoons": "colheres",
     "take a look at your day": "o resumo do teu dia",
+    "take every" : "tomar a cada",
     "the person you will be monitoring will have to scan this code": "a pessoa que irá monitorizar terá de fazer scan ao codigo QR",
     "this email has already been used": "este email já foi usado",
     "time": "hora",
@@ -225,6 +229,7 @@
     "ujjayi": "ujjayi",
     "unnable to communicate": "incapaz de comunicar",
     "unselected": "não selecionado",
+    "until": "até",
     "upon awaking": "ao acordar",
     "URL is required": "é necessário um URL",
     "user": "utilizador",
