solved issues with MedicationPage

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -51,6 +51,7 @@
     "description:": "descrição:",
     "dismiss": "descartar",
     "diziness": "tonturas",
+    "done": "feito",
     "don't have an account": "não tem conta criada",
     "dosage": "dose",
     "duration": "duração",
@@ -151,7 +152,9 @@
     "PDF export": "exportar PDF",
     "pill": "comprimido",
     "pills": "comprimidos",
+    "pill(s)": "comprimido(s)",
     "please enter a valid email address": "por favor insira um email valido",
+    "press + to add a medication": "pressiona + para adicionar um medicamento",
     "press here to add": "pressiona aqui para adicionar",
     "press here to choose": "pressionar aqui para escolher",
     "previous medication": "medicação anterior",
