--- a/lang/pt.json
+++ b/lang/pt.json
@@ -28,7 +28,7 @@
     "camera access": "acesso à câmera",
     "caregiver": "cuidador",
     "calendar": "calendário",
-    "challenges in Epilepsy": "desafios da Epilepsia",
+    "challenges in epilepsy": "desafios da epilepsia",
     "changes in awareness": "alteração de consciência",
     "changes in medication": "mudanças na medicação",
     "clonic": "clonica",
@@ -66,7 +66,10 @@
     "female": "feminino",
     "fever or overheated": "febre",
     "finish": "terminar",
+    "first thing in the morning relaxation exercize for a quick burst of energy and alertness": "exercício de relaxamento matinal para iniciar o dia com um boost de energia",
     "food": "alimentação",
+    "formal practice which is the source of prana, or vital life force": "prática formal que é a fonte de prana ou de força vital",
+    "four-square breathing, sometimes referred to as the box breathing technique, helps any time you feel stressed": "respiração em quadrado, ou respiração em caixa, útil em momentos de stress",
 
     "general": "geral",
     "good": "bom",
@@ -96,7 +99,7 @@
     "loss of urine or bowel control": "perda de urina ou de controlo da bexiga",
 
     "male": "masculino",
-    "managing Epilepsy": "gerir a Epilépsia",
+    "managing epilepsy": "gerir a epilepsia",
     "medication": "medicação",
     "medication prescription": "medicamentos prescritos",
     "missed any medication": "alguma medicação em falta",
@@ -118,6 +121,7 @@
 
     "name": "nome",
     "name is required": "é necessário um nome",
+    "natural and tranquilizing breathing exercise for the nervous system": "exercício de respiração natural e tranquilizante para o sistema nervoso",
     "next": "próxima",
     "new seizure": "nova crise",
     "new seizure event": "novo evento de crise",
@@ -142,6 +146,7 @@
     "please enter a valid email address": "por favor insira um email valido",
     "press here to add": "pressiona aqui para adicionar",
     "press here to choose": "pressionar aqui para escolher",
+    "press anywhere to start, slide right for other exercises": "carregue para começar, deslize para a direita para mudar o exercício",
     "previous medication": "medicação anterior",
     "profile": "perfil",
     "possible trigers": "possíveis fatores que puderam despoletar crises",
@@ -223,8 +228,10 @@
     "was it one of your usual seizures": "foi uma das tuas crises habituais",
     "week": "semana",
     "weeks": "semanas",
-    "what is": "o que é",
+    "what is SUDEP": "o que é SUDEP",
+    "what is a seizure": "o que é uma crise epilética",
     "while sleeping": "a dormir",
+    "Write here a new question": "escreve aqui uma nova pergunta",
 
     "you need a password": "necessita de uma senha",
     "you need a question": "necessita de questões",
