updates & solved issues after merge

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -251,7 +251,7 @@
     "what is SUDEP": "o que é SUDEP",
     "what is a seizure": "o que é uma crise epilética",
     "while sleeping": "a dormir",
-    "Write here a new question": "escreve aqui uma nova pergunta",
+    "write here a new question": "escreve aqui uma nova pergunta",
 
     "you need a password": "necessita de uma senha",
     "you need a question": "necessita de questões",
