Traduções, Resumo do dia melhorado

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -55,6 +55,7 @@
     "don't have an account": "não tem conta criada",
     "dosage": "dose",
     "duration": "duração",
+    "duration of seizure": "duração da crise",
 
     "education": "educação",
     "email is required": "é necessário um email",
@@ -82,6 +83,7 @@
     "had an aura": "sentir uma aura",
     "has to be a valid Email": "tem de ser um email valido",
     "headaches": "dor de cabeça",
+    "hello": "olá",
     "hold": "sustenha",
     "home": "página inicial",
     "hormonal fluctuations": "flutuações hormonais",
@@ -135,6 +137,7 @@
     "name is required": "é necessário um nome",
     "natural and tranquilizing breathing exercise for the nervous system": "exercício de respiração natural e tranquilizante para o sistema nervoso",
     "next": "próxima",
+    "new medication": "novo medicamento",
     "new seizure": "nova crise",
     "new seizure event": "novo evento de crise",
     "new seizure type": "novo tipo de crise",
@@ -144,6 +147,7 @@
     "normal": "normal",
     "not filled": "não preenchido",
 
+    "one time schedule intake": "toma única agendada",
     "other": "outros",
     "other medication": "outro medicamento",
     "overtired or irregular sleep": "cansado ou sono irregular",
@@ -200,6 +204,7 @@
     "sleepy": "sonolento",
     "somnolence": "sonolência",
     "square": "quadrado",
+    "spontaneous intake": "toma espontânea",
     "starting date": "início da toma",
     "statistics": "estatísticas",
     "starting time": "hora de início",
