overview of the day -- save when taken

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -203,6 +203,7 @@
     "sleep log": "registo de sono",
     "sleepy": "sonolento",
     "somnolence": "sonolência",
+    "soon": "brevemente",
     "square": "quadrado",
     "spontaneous intake": "toma espontânea",
     "starting date": "início da toma",
@@ -245,7 +246,7 @@
     "until": "até",
     "upon awaking": "ao acordar",
     "URL is required": "é necessário um URL",
-    "user": "utilizador",
+    "user page": "página do utilizador",
     "user seizure types": "tipos de crise do utilizador",
     "user with this email doesn't exist": "o usuário com este e-mail não existe",
     "user with this email has been disabled": "o usuário com este e-mail foi desativado",
